--- a/students/remix.html
+++ b/students/remix.html
@@ -19,7 +19,7 @@
         <link rel="apple-touch-icon" href="icon.png">
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/main.css?ver=2.9">
+        <link rel="stylesheet" href="../css/main.css?ver=3">
     </head>
     <body>
       <!--this is an evolving document -- be kind to it and the intent of the authors-->
@@ -27,7 +27,8 @@
           <div class="row justify-content-md-center">
             <div class="col-md-9">
                <h1>Keep on Learning</h1>
-               <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person courses will need to transition to a remote format. Don’t worry! Your professors will do everything they can to make sure your course stays on track.</p>
+               <p>Sometimes the unexpected happens. When it does, VCU is prepared to keep on teaching and keep on learning. Student success remains the core of our mission, and during these “remote” times, our goal across the university is to continue to provide resources to help all of our students successfully complete this semester.  Below you will find a summary list of resources available to students.  If you cannot find an answer to your question or resource need, use <a href="#help">these forms</a> to reach out for additional assistance from VCU officials responsible for the area of your request.
+               </p>
                <h2>The Goal = Keep Learning</h2>
                <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
             </div>
@@ -44,7 +45,7 @@
                       Support Details
                     </a></div>                  
                   <div class="col-md-3"><a class="app-nav" href="#help">
-                      Connect for<br>Help
+                      Connect for Help
                     </a></div>                 
                   </div>
                 </div>
