start fixing the keep on teaching side of things

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body id="top">
     <!--this is an evolving document - it is only a few days old - be kind to it and the intent of the authors-->
     <div class="container content-primary__content" id="keep-on">
-        <div class="row" id="tips">
-            <div class="col-md-12">
+        <div class="row justify-content-md-center" id="tips">
+            <div class="col-md-10">
                 <h1>Keep on Teaching</h1>
                 <!--<!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#keep-on" aria-label="mail this">email a link to this section</a></div>-->
                 <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
