community addition, typo, etc.

--- a/students/remix.html
+++ b/students/remix.html
@@ -35,14 +35,14 @@
              <!--row nav-->
               <div class="col-md-9"> 
                 <div class="row">              
-                  <div class="col-md-3"><a class="app-nav" href="#help">
+                  <div class="col-md-3"><a class="app-nav" href="#online-tips">
                      Online Learning Tips
                     </a></div>
                   <div class="col-md-3"><a class="app-nav" href="#mind">
                      The Ram Frame of Mind
                     </a></div>                  
                     <div class="col-md-3"><a class="app-nav" href="#stu-support">
-                      Support Details
+                      Support<br>Menu
                     </a></div>                  
                   <div class="col-md-3"><a class="app-nav" href="#help">
                       Connect for Help
@@ -347,6 +347,29 @@
                   </div>
               </div>
               <!--accommodations card end-->
+              <!--standards card-->
+              <div class="card">
+                  <div class="card-header" id="com-standards">
+                     <h2 class="mb-0">
+                          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#standards" aria-expanded="false" aria-controls="standards">
+                            Inclusive Community Standards
+                          </button>
+                      </h2>
+                  </div>
+                  <div id="standards" class="collapse" aria-labelledby="com-standards" data-parent="#stu-support">
+                      <div class="card-body">
+                          <p>Virginia Commonwealth University remains committed to promoting a culture of inclusion for all its employees, patients and students. Discrimination or discriminatory harassment is unlawful. It is also harmful to the well-being of our university community. We are aware of the news reports regarding bullying, harassment and stereotyping of Chinese Americans and persons of Asian descent in light of the coronavirus (COVID-19). There is no place for this sort of behavior, especially not at VCU. Our university values, specifically those related to diversity and inclusion, have withstood many difficult situations and trying times, and they will not falter now. Please be assured that VCU will make every effort to prevent the occurrence of unlawful discrimination and, if necessary, take prompt and appropriate action to remedy and prevent its reoccurrence. Every member of our community is asked to:</p>
+                        <ul>
+                          <li>Become familiar with the university’s policy on <a href="https://policy.vcu.edu/universitywide-policies/policies/preventing-and-responding-to-discrimination.html">preventing and responding to discrimination</a> in the VCU Policy Library.</li>
+                          <li>Consult with Equity and Access Services or <a href="https://hr.vcu.edu/">VCU Human Resources</a> for additional guidance on how to maintain a bias-free environment.</li>
+                          <li>Encourage individuals affected by this type of misconduct to file a report of discrimination or harassment with <a href="https://equity.vcu.edu/">Equity and Access Services</a>.</li>
+                          <li>Bookmark and share information on university or community agencies that offer support or services, such as <a href="https://counseling.vcu.edu/">VCU Counseling Services</a>.</li>
+                          <li>Offer nonjudgmental support and empathy to those affected.</li>
+                        </ul>
+                      </div>
+                  </div>
+              </div>
+              <!--standards card end-->
               <!--help card-->
             <!--   <div class="card">
                   <div class="card-header" id="help-needed">
