update video stuff to reference shorter

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#lecture" aria-label="mail this">email a link to this section</a></div> -->
             </div>
             <div class="col-md-8">
-                <p>When thinking about lecture options it is important to realize that live video is more challenging than recording video ahead of time. Allowing students to access content on their schedule also has advantages. Consider saving live interactions for when you want back-and-forth dialog with students. </p>
+                <p>When thinking about lecture options it is important to realize that live video is more challenging than recording video ahead of time. Allowing students to access content on their schedule also has advantages. Consider saving live interactions for when you want back-and-forth dialog with students. Keeping asynchronous videos short (6-10 minutes) will help <a href="https://cft.vanderbilt.edu/guides-sub-pages/effective-educational-videos/">increase viewing completion</a> and reduce technical issues.  </p>
             </div>
         </div>
         <!--end lecture row-->
