--- a/index.html
+++ b/index.html
@@ -31,12 +31,17 @@
                 <!--<!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#keep-on" aria-label="mail this">email a link to this section</a></div>-->
                 <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
                 <div class="col-md-12 alert alert-covid" role="alert" id="alert">
-                    <h2 id="zoom-update">Zoom Update</h2>
+                    <h2>Student Support</h2>
+                    <p>
+                        Faculty or staff who know of a student needing assistance and who was not able to find an answer from the <a href="https://altlab.vcu.edu/rapid-response/students/">Keep Learning</a> resources are encouraged to submit the form below (You will need to be logged into your VCU Google account.):</p>
+                 <a class="btn btn-help" href="https://docs.google.com/forms/d/e/1FAIpQLScpO42w9fDfI3gB51H2eo1AyG8ovyNqwazIz5tGBFN2r38F6A/viewform">Refer a student for additional support</a>
+                    </p>
+                    <!-- <h2 id="zoom-update">Zoom Update</h2>
                     <p>
                         As of March 18th, all VCU Zoom accounts are being issued as "Licensed." You no longer have to fill out a request ticket: simply log in at <a href="http://vcu.zoom.us/" target="_blank" rel="noopener noreferrer" data-saferedirecturl="https://www.google.com/url?q=http://vcu.zoom.us&amp;source=gmail&amp;ust=1584623381705000&amp;usg=AFQjCNHS_sRzkaD3vyqcXUnzIitIugHWrg">vcu.zoom.us</a> with your eID and VCU password to have an account provisioned.</p>
                     <p>If you already have a free account, please log in again at the <a href="http://vcu.zoom.us/">portal</a> to be upgraded to "Licensed."</p>
                     <p><a href="https://docs.google.com/document/d/1j_U5Yube0BWZRreVQf4qgAlZ3wBa2uG3chkKDp643QY/edit">Get more Zoom Pro details here.</a>
-                    </p>
+                    </p> -->
                 </div>
                 <div class="row">
                     <div class="col-md-5">
