adobe update, shift in help

--- a/students/index.html
+++ b/students/index.html
@@ -29,9 +29,23 @@
                <h1>Keep on Learning</h1>
                <p>Sometimes the unexpected happens. When it does, VCU is prepared to keep on teaching and keep on learning. Student success remains the core of our mission, and during these “remote” times, our goal across the university is to continue to provide resources to help all of our students successfully complete this semester.  Below you will find a summary list of resources available to students.  If you cannot find an answer to your question or resource need, use <a href="#help">these forms</a> to reach out for additional assistance from VCU officials responsible for the area of your request.
                </p>
+                <!--ALERT-->
+            <div class="alert alert-covid" role="alert" id="alert">
+                <h2>Free Adobe Software</h2>
+                <p>
+                  On behalf of the School of the Arts, Technology Services and the VCU Libraries, we’d like to announce that a limited two-month license for Adobe Creative Cloud is now available for free to all VCU students.</p>
+
+                  <p>This new license can be installed on unlimited personal devices, including tablets and smartphones, and gives you access to all Adobe Creative Cloud applications, including Fonts, Portfolio, Spark Premium, and Behance.</p>
+
+                  <p>More information is available at <a href="http://adobe.vcu.edu/" target="_blank" rel="noopener" >adobe.vcu.edu</a></p>
+
+                  <p>Students can receive their licenses directly at: <a href="http://vcu.onthehub.com/" target="_blank" rel="noopener">vcu.onthehub.com</a>
+                </p>                  
+            </div>
+            <!--end alert-->
                <h2>The Goal = Keep Learning</h2>
                <p>This toolkit was developed to provide students resources and support as they keep learning. The tips, tools, and resources below are here to support students with unexpected transition to remote learning and promote course completion. As outlined below, VCU aims to approach all aspects of academic continuity with flexibility, care, compassion, kindness, creativity, and positivity.</p>
-            </div>
+            </div>           
              <!--row nav-->
               <div class="col-md-9"> 
                 <div class="row">              
