--- a/students/index.html
+++ b/students/index.html
@@ -33,9 +33,7 @@
             <div class="alert alert-covid" role="alert" id="alert">
                 <h2>Free Adobe Software</h2>
                 <p>
-                  On behalf of the School of the Arts, Technology Services and the VCU Libraries, we’d like to announce that a limited two-month license for Adobe Creative Cloud is now available for free to all VCU students.</p>
-
-                  <p>This new license can be installed on unlimited personal devices, including tablets and smartphones, and gives you access to all Adobe Creative Cloud applications, including Fonts, Portfolio, Spark Premium, and Behance.</p>
+                  On behalf of the School of the Arts, Technology Services, and VCU Libraries a limited two-month license for Adobe Creative Cloud is now available for free to all VCU students.</p>
 
                   <p>More information is available at <a href="http://adobe.vcu.edu/" target="_blank" rel="noopener" >adobe.vcu.edu</a></p>
 
