typo and laptop loaner changes

--- a/index.html
+++ b/index.html
@@ -776,7 +776,10 @@
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#hardware" aria-label="mail this">email a link to this section</a></div> -->
                 <ul>
                     <li>
-                        VCU is providing a limited number of laptops to assist with online instruction that will be available <i>on loan</i> for instructional faculty. These laptops will be available on a first-come, first-served basis. The laptops that are being distributed are subject to VCU computing use policies. <a href="http://appointlet.vcu.edu/" target="_blank" rel="noopener">Please make an appointment</a> to pick one up Thursday, March 19th or Friday, March 20th in the <a href="https://ts.vcu.edu/it-support-center/" target="_blank" rel="noopener" data-saferedirecturl="https://www.google.com/url?q=https://ts.vcu.edu/it-support-center/&amp;source=gmail&amp;ust=1584668608986000&amp;usg=AFQjCNGooDBZnRHmCuuM8LBfNA-EoZPzLw">IT Support Center</a> located in the lower level of Cabell Library.
+                       <p>VCU is providing a limited number of loaner laptops to assist with online learning that will be available on loan for faculty who do not have a working laptop. These loaners are available on a first-come, first-served basis and are limited in supply. As such, please confirm with your departmental IT support that they do not have a laptop for you to use prior to requesting a loaner laptop. Don't know who your IT support is? Call the IT Support Center at 804-828-2227 or email <a href="mailto:itsc@vcu.edu">itsc@vcu.edu</a> for assistance. </p>
+
+                        <p>The loaners that are being distributed are subject to VCU computing use policies. Upon request, machines will be prepared and shipped to faculty via FedEx to their address (shipments can only be made to domestic addresses within the U.S. contiguous 48 states). Please navigate to <a href="https://go.vcu.edu/loanerlaptop">VCU's laptop loaner page</a> to start the loaner request. </p>
+
                     </li>
                     <li>If you need to purchase a laptop, computer, tablet, microphone or webcam - consider <a href="https://ramtech.vcu.edu/">RAM Tech</a> (VCU discounts and payroll deduction) or a reputable retailer. Most laptops now have integrated webcams and wireless headphones usually have integrated microphones in them, which can be used for remote teaching and learning.</li>
                 </ul>
@@ -797,7 +800,7 @@
                 </ul>
             </div>
             <div class="col-md-8">
-                <h3 id="accomodations">Student Accommodations</h3>
+                <h3 id="accommodations">Student Accommodations</h3>
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#accommodations" aria-label="mail this">email a link to this section</a></div> -->
                 <p>
                     We are all moving forward into uncharted territory. For students with approved accommodations, there may be some changes to how these are implemented. This will become a collaborative process between you, the student, and, if needed, the <a href="https://saeo.vcu.edu/">Office of Student Accessibility and Educational Opportunity</a> (for programs on the Monroe Park Campus) or the <a href="https://das.vcu.edu/">Division for Academic Success </a>(for programs in Health Science programs). For those students who have accommodations in place, start a conversation as soon as possible to discuss how they will translate to a remote/online format. SAEO (<a href="mailto:saeo@vcu.edu">saeo@vcu.edu</a>) and DAS (<a href="mailto:acadsuccess@vcu.edu">acadsuccess@vcu.edu</a>) are here to help with this process.
