--- a/students/index.html
+++ b/students/index.html
@@ -118,7 +118,7 @@
                   <div id="tech" class="collapse" aria-labelledby="tech-support" data-parent="#stu-support">
                       <div class="card-body">
                           <h3 id="loans">Laptop Loans</h3>
-                          <p>VCU is providing a limited number of laptops to assist with online learning that will be available <em>on loan</em> for students. These laptops will be available on a first-come, first-served basis. The laptops that are being distributed are subject to VCU computing use policies. More information will be available during the week of March 23rd.  Please check back here for an update.</p>
+                          <p>VCU is providing a limited number of loaner laptops to assist with online learning that will be available on loan for students who do not have a working laptop. These loaners are available on a first-come, first-served basis and are limited in supply. The loaners that are being distributed are subject to VCU computing use policies. Upon request, machines will be prepared and shipped to students via FedEx to their address (shipments caPlease navigate to <a href="https://go.vcu.edu/loanerlaptop">VCU's laptop loaner page</a> to start the loaner request.</p>
 
                           <p>For our veterans who need a laptop computer a local veteran support organization,<a href="https://techfortroops.org/"> Tech for Troops</a>, provides FREE laptops to veterans who are going back to school.</p>
                           <h3 id="access">Access to the Internet</h3>
