demeanor addition, date change

--- a/students/index.html
+++ b/students/index.html
@@ -207,7 +207,7 @@
                           <ul>
                             <li>Use the <a href="https://vcu.navigate.eab.com/app/">Navigate app</a> to schedule an appointment with your academic advisor. Advisors can talk via phone, chat, or video conferencing - you have many options!</li>
                             <li>For more information about your degree program and academic advising resources, visit our <a href="https://academicadvising.vcu.edu/">VCU Advising website</a> or your departmental website.</li>
-                            <li>The last date to withdraw from Spring 2020 courses is April 17th (this is a date change).  <strong>We urge any student who is considering a course withdrawal to </strong><a href="https://vcu.navigate.eab.com/app/"><strong>schedule an appointment</strong></a><strong> with their advisor PRIOR to withdrawing</strong>.  If you are a student with a registration hold and are unable to withdraw via eServices, you must email <a href="mailto:RAR@vcu.edu">RAR@vcu.edu</a> from your VCU email address with your V# and the course(s) you are requesting to be withdrawn from.</li>
+                            <li>The last date to withdraw from Spring 2020 courses is April 30th (this is a date change).  <strong>We urge any student who is considering a course withdrawal to </strong><a href="https://vcu.navigate.eab.com/app/"><strong>schedule an appointment</strong></a><strong> with their advisor PRIOR to withdrawing</strong>.  If you are a student with a registration hold and are unable to withdraw via eServices, you must email <a href="mailto:RAR@vcu.edu">RAR@vcu.edu</a> from your VCU email address with your V# and the course(s) you are requesting to be withdrawn from.</li>
                             <li>Fall 2020 course registration begins on March 31st (this is a date change).  Please review what day you can <a href="https://rar.vcu.edu/registration/dates/">register for classes</a> and try to “meet” (remotely) with your advisor prior to this important date.</li>
                           </ul>
                       </div>
@@ -358,7 +358,7 @@
                   <div class="card-header" id="com-standards">
                      <h2 class="mb-0">
                           <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#standards" aria-expanded="false" aria-controls="standards">
-                            Inclusive Community Standards
+                            VCU Community Standards
                           </button>
                       </h2>
                   </div>
@@ -371,6 +371,7 @@
                           <li>Encourage individuals affected by this type of misconduct to file a report of discrimination or harassment with <a href="https://equity.vcu.edu/">Equity and Access Services</a>.</li>
                           <li>Bookmark and share information on university or community agencies that offer support or services, such as <a href="https://counseling.vcu.edu/">VCU Counseling Services</a>.</li>
                           <li>Offer nonjudgmental support and empathy to those affected.</li>
+                          <li>VCU expects that students will maintain the same professional demeanor online as they would during in-person learning. Instructors who experience disruptions to the learning environment can address student behavior as they normally would and also refer to Student Conduct and Academic Integrity.</li>
                         </ul>
                       </div>
                   </div>
