--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         <div class="row justify-content-md-center" id="tips">
             <div class="col-md-10">
                 <h1>Keep on Teaching</h1>
+                <div class="authorship alert alert-secondary" role="alert" aria-atomic="true">This resource was developed by the VCU Academic Continuity Committee with contributions from students, faculty, deans, librarians, and the MCV, and Monroe Park campuses.</div>
                 <!--<!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#keep-on" aria-label="mail this">email a link to this section</a></div>-->
                 <p>Sometimes the unexpected happens. When it does, VCU will be prepared to keep on teaching and keep on learning. Were we to have a blizzard or some other surprise event, no doubt we will eventually experience a moment where all in-person academic meetings will need to transition to a remote format. If all or part of VCU instructional locations become unavailable or need to be closed, academic continuity can maintain course progression.</p>
-                <div class="col-md-12 alert alert-covid" role="alert" id="alert">
+                <div class="col-md-12 alert alert-covid" role="alert" id="alert" aria-atomic="true">
                     <h2>Student Support</h2>
                     <p>
                         Faculty or staff who know of a student needing assistance and who was not able to find an answer from the <a href="https://altlab.vcu.edu/rapid-response/students/">Keep Learning</a> resources are encouraged to submit the form below (You will need to be logged into your VCU Google account.):</p>
@@ -367,7 +368,7 @@
                 <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#lecture" aria-label="mail this">email a link to this section</a></div> -->
             </div>
             <div class="col-md-8">
-                <p>When thinking about lecture options it is important to realize that live video is more challenging than recording video ahead of time. Allowing students to access content on their schedule also has advantages. Consider saving live interactions for when you want back-and-forth dialog with students. Keeping asynchronous videos short (6-10 minutes) will help <a href="https://cft.vanderbilt.edu/guides-sub-pages/effective-educational-videos/">increase viewing completion</a> and reduce technical issues.  </p>
+                <p>When thinking about lecture options it is important to realize that live video is more challenging than recording video ahead of time. Allowing students to access content on their schedule also has advantages. Consider saving live interactions for when you want back-and-forth dialog with students. Keeping asynchronous videos short (6-10 minutes) will help <a href="https://cft.vanderbilt.edu/guides-sub-pages/effective-educational-videos/">increase viewing completion</a> and reduce technical issues. See <a href="https://docs.google.com/document/d/1btkHs3QgFichl9ZW3KGO-6caxjScCYKtBUuhnPmndb8/edit#heading=h.d2n6ibzbcrzc">VCU Best Practices for Teaching Remotely with Zoom</a> for additional suggestions and FERPA details.</p>
             </div>
         </div>
         <!--end lecture row-->
@@ -404,8 +405,9 @@
                 <h4>Resources</h4>
                 <ul>
                     <li><a href="https://ts.vcu.edu/askit/video-services/video-conferencing-support/zoom-desktop-conferencing/">Zoom Pro at VCU</a></li>
+                    <li><a href="https://docs.google.com/document/d/1btkHs3QgFichl9ZW3KGO-6caxjScCYKtBUuhnPmndb8/edit#heading=h.d2n6ibzbcrzc">VCU Best Practices for Teaching Remotely with Zoom</a></li>
                     <li><a href="https://docs.google.com/document/d/1nmzTUPaVWGDZD2gjTPRGOlDBXWsJ89BPQ8MS0u-51fg/edit?ts=5e6a9e9e">Getting Started with Zoom at VCU</a></li>
-                    <li><a href="https://youtu.be/aOBMMkOuoK8">Quick & Dirty Tips for Online Teaching: Webcams</a></li>
+                    <li><a href="https://youtu.be/aOBMMkOuoK8">Quick & Dirty Tips for Online Teaching: Webcams</a></li>                    
                     <li><a href="https://support.zoom.us/hc/en-us/articles/115004794983-Automatically-Transcribe-Cloud-Recordings-">Creating a Zoom transcript</a></li>
                 </ul>
             </div>
@@ -849,7 +851,7 @@
         <div class="col-md-8">
             <h3 id="inclusive">Statement from VCU’s Inclusive Excellence:</h3>
             <!--<div class="link-this"><a href="mailto:?subject=VCU Resource&body=https://altlab.vcu.edu/rapid-response/#inclusive" aria-label="mail this">email a link to this section</a></div> -->
-            <p>Virginia Commonwealth University remains committed to promoting a culture of inclusion for all its employees, patients and students. Discrimination or discriminatory harassment is unlawful. It is also harmful to the well-being of our university community. We are aware of the news reports regarding bullying, harassment and stereotyping of Chinese Americans and persons of Asian descent in light of the coronavirus (COVID-19). There is no place for this sort of behavior, especially not at VCU. Our university values, specifically those related to diversity and inclusion, have withstood many difficult situations and trying times, and they will not falter now. Please be assured that VCU will make every effort to prevent the occurence of unlawful discrimination and, if necessary, take prompt and appropriate action to remedy and prevent its reoccurence. Every member of our community is asked to:</p>
+            <p>Virginia Commonwealth University remains committed to promoting a culture of inclusion for all its employees, patients and students. Discrimination or discriminatory harassment is unlawful. It is also harmful to the well-being of our university community. We are aware of the news reports regarding bullying, harassment and stereotyping of Chinese Americans and persons of Asian descent in light of the coronavirus (COVID-19). There is no place for this sort of behavior, especially not at VCU. Our university values, specifically those related to diversity and inclusion, have withstood many difficult situations and trying times, and they will not falter now. Please be assured that VCU will make every effort to prevent the occurrence of unlawful discrimination and, if necessary, take prompt and appropriate action to remedy and prevent its re-occurrence. Every member of our community is asked to:</p>
             <ul>
                 <li>Become familiar with the university’s policy on <a href="https://policy.vcu.edu/universitywide-policies/policies/preventing-and-responding-to-discrimination.html">preventing and responding to discrimination</a> in the VCU Policy Library.</li>
                 <li>Consult with Equity and Access Services or <a href="https://hr.vcu.edu/">VCU Human Resources</a> for additional guidance on how to maintain a bias-free environment.</li>
@@ -860,7 +862,7 @@
         </div>
         <!--end inclusive -->
         <div id="footer">
-            <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep Teaching</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://altlab.vcu.edu/rapid-response/" property="cc:attributionName" rel="cc:attributionURL">VCU Rapid Transition Taskforce</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep Teaching</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://altlab.vcu.edu/rapid-response/" property="cc:attributionName" rel="cc:attributionURL">VCU Academic Continuity Committee</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
         </div>
     </div>
     <!--end support row-->
