--- a/students/index.html
+++ b/students/index.html
@@ -27,10 +27,11 @@
           <div class="row justify-content-md-center">
             <div class="col-md-9">
                <h1>Keep on Learning</h1>
+               <div class="authorship alert alert-secondary" role="alert" aria-atomic="true">This resource was developed by the VCU Academic Continuity Committee with contributions from students, faculty, deans, librarians, MCV, and Monroe Park.</div>
                <p>Sometimes the unexpected happens. When it does, VCU is prepared to keep on teaching and keep on learning. Student success remains the core of our mission, and during these “remote” times, our goal across the university is to continue to provide resources to help all of our students successfully complete this semester.  Below you will find a summary list of resources available to students.  If you cannot find an answer to your question or resource need, use <a href="#help">these forms</a> to reach out for additional assistance from VCU officials responsible for the area of your request.
                </p>
                 <!--ALERT-->
-            <div class="alert alert-covid" role="alert" id="alert">
+            <div class="alert alert-covid" role="alert" id="alert" aria-atomic="true">
                 <h2>Free Adobe Software</h2>
                 <p>
                   On behalf of the School of the Arts, Technology Services, and VCU Libraries a limited two-month license for Adobe Creative Cloud is now available for free to all VCU students.</p>
