--- a/students/index.html
+++ b/students/index.html
@@ -27,7 +27,7 @@
           <div class="row justify-content-md-center">
             <div class="col-md-9">
                <h1>Keep on Learning</h1>
-               <div class="authorship alert alert-secondary" role="alert" aria-atomic="true">This resource was developed by the VCU Academic Continuity Committee with contributions from students, faculty, deans, librarians, MCV, and Monroe Park.</div>
+               <div class="authorship alert alert-secondary" role="alert" aria-atomic="true">This resource was developed by the VCU Academic Continuity Committee with contributions from students, faculty, deans, librarians, and the MCV, and Monroe Park campuses.</div>
                <p>Sometimes the unexpected happens. When it does, VCU is prepared to keep on teaching and keep on learning. Student success remains the core of our mission, and during these “remote” times, our goal across the university is to continue to provide resources to help all of our students successfully complete this semester.  Below you will find a summary list of resources available to students.  If you cannot find an answer to your question or resource need, use <a href="#help">these forms</a> to reach out for additional assistance from VCU officials responsible for the area of your request.
                </p>
                 <!--ALERT-->
@@ -408,9 +408,14 @@
                  <p>Faculty, staff, or students who know of a student needing assistance and were not able to find an answer from the above resources are encouraged to submit the form below (You will need to be logged into your VCU Google account.):</p>
                  <a class="btn btn-help" href="https://docs.google.com/forms/d/e/1FAIpQLScpO42w9fDfI3gB51H2eo1AyG8ovyNqwazIz5tGBFN2r38F6A/viewform">Refer a student for additional support</a></p>
             </div>
+             <div id="footer">
+            <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" /></a><br /><span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type">Keep Teaching</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="https://altlab.vcu.edu/rapid-response/" property="cc:attributionName" rel="cc:attributionURL">VCU Academic Continuity Committee</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.
+        </div>
+    </div>
             
             <div class="bottom-padding"></div>
         </div>
+
         <!-- student Modal -->
          <!--  <div class="modal fade" id="helpModal" tabindex="-1" role="dialog" aria-labelledby="helpModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
